deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loyalshift-platform-deployment # Name of the deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: loyalshift-platform
  template:
    metadata:
      labels:
        app: loyalshift-platform
    spec:
      containers:
        - name: loyalshift-platform-container
          image: dasome29/loyalshift-platform:v2.0
          ports:
            - containerPort: 3000
