service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loyalshift-platform-service # Name of the service
spec:
  selector:
    app: loyalshift-platform # Selects pods with this label (those from the deployment)
  ports:
    - protocol: TCP
      port: 80       # Port the service will be available on WITHIN the cluster
      targetPort: 3000 # Port the service will forward traffic to (Next.js server)
  type: ClusterIP # Common options: ClusterIP, NodePort, LoadBalancer
